# lumosdb

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  api.md  apits.md  build.rs  db.md  do1.md  do2.md  duckdb.md  implementation-summary.md  justfile  next.js  notepad  package.json  pipline.md  plan1.md  plan2.md  plan2.md.updated  plan3.md  plan4.md  settings.gradle.kts  start_lumosdb_server.sh  start_server.sh  test_query.sql  test_script.sql  ui.md  uib.md  uib.md.new
.cargo/: config  config.toml
clients/go/: go.mod  (+1 more)
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: basic_usage.rs
clients/rust/src/: api_client.rs  client.rs  db_client.rs  error.rs  health_client.rs  lib.rs  types.rs  vector_client.rs
clients/validation/: Cargo.toml  README.md  build.gradle.kts  go.mod  gradle.properties  run_validations.sh  validate_go.go  validate_kotlin.kt  validate_rust.rs
clients/validation/src/main/kotlin/io/lumosdb/validation/: ValidateKotlin.kt
core/: Cargo.toml  build.rs
core/benches/: query_benchmark.rs
core/examples/: nl_query.rs
core/src/: lib.rs  utils.rs
core/src/duckdb/: analytics.rs  connection.rs  mod.rs
core/src/nlq/: context.rs  mod.rs  schema.rs  translator.rs
core/src/query/: executor.rs  mod.rs  parser.rs  router.rs
core/src/sqlite/: bulk.rs  connection.rs  mod.rs  optimizer.rs  schema.rs  sync.rs  transaction.rs
core/src/sync/: mod.rs  schema.rs  strategy.rs  tracker.rs
core/src/vector/: distance.rs  index.rs  mod.rs
core/tests/: duckdb_tests.rs  query_tests.rs  sqlite_tests.rs  sync_tests.rs  vector_simple_tests.rs  vector_standalone_tests.rs  vector_tests.rs
data/: sample.csv
dataflow/: Cargo.toml  README.md
dataflow/examples/: jdbc_etl_config.yaml  memory_pipeline_config.yaml  minimal_wasm_test.rs  mongodb_etl_config.yaml  plugin_manager.rs  plugin_test.rs  run_etl_job.rs  run_memory_etl.rs  sample_etl.yaml  simple_plugin_test.rs  simple_wasm_test.rs  standalone_wasm_test.rs  test_plugins.rs  vector_store_test.rs
dataflow/examples/plugins/: build_and_test.bat  build_and_test.sh  readme.md
dataflow/examples/plugins/mongodb/: Cargo.toml
dataflow/examples/plugins/mongodb/src/: lib.rs
dataflow/plugins/: mongodb.wasm
dataflow/sample_data/: products.csv
dataflow/scripts/: validate_wasm_system.sh  wasm_test.sh
dataflow/src/: config.rs  dag.rs  lib.rs  main.rs  types.rs
dataflow/src/actors/: dag_manager.rs  job.rs  messages.rs  pipeline.rs
dataflow/src/api/: mod.rs
dataflow/src/api/rest/: handlers.rs  mod.rs  routes.rs
dataflow/src/extractors/: csv.rs  factory.rs  jdbc.rs  memory.rs  mod.rs
dataflow/src/loaders/: csv.rs  factory.rs  jdbc.rs  memory.rs  mod.rs
dataflow/src/plugin/: cli.rs  integration.rs  metadata.rs  mod.rs
dataflow/src/transformers/: factory.rs  filter.rs  map.rs  mod.rs
dataflow/src/vector_store/: duckdb.rs  factory.rs  mod.rs  sqlite.rs
dataflow/wasm-mongodb-test/: Cargo.toml
dataflow/wasm-mongodb-test/src/: main.rs
dataflow/wasm-postgresql-test/: Cargo.toml  README.md  build.sh  config-example.toml  optimization-profiles.toml
dataflow/wasm-postgresql-test/src/: main.rs  main.rs.backup  test_schema_migration.rs
dataflow/wasm-postgresql-test/templates/: comparison.hbs  optimization_report.hbs  report.hbs
dataflow/wasm-postgresql-test/test_results/: postgresql_test_0268b88f-4816-4cd5-8dcb-bbb9813afc70.json  postgresql_test_ff2979b8-4920-4027-a8fa-1d295e9760ee.json
dataflow/wasm-test/: Cargo.toml
docs/: dependencies.md  packaging.md
examples/: memory_wasm_test.rs  run_wasm_etl.rs  simple_wasm_test.rs  validate_wasm_plugin.rs  wasm_plugin_manager.rs
examples/plugins/mongodb/: Cargo.toml
examples/plugins/mongodb/src/: lib.rs  wit-bindgen.rs
examples/plugins/postgresql/: Cargo.toml  README.md  build.sh
examples/plugins/postgresql/src/: lib.rs
lumos-db/: LICENSE  README.md  api.md  package.json  ui.md
lumosdb-api/: .env.example  README.md  package.json  tsconfig.json
lumosdb-ui/: .eslintrc.js  README.md  jest.config.js  jest.setup.js  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.paths.json
lumosdb_cli/: Cargo.toml
lumosdb_cli/src/: bench.rs  cli.rs  commands.rs  config.rs  connection.rs  lib.rs  main.rs  output.rs  repl.rs  sync.rs
mongodb/: Cargo.toml
mongodb/src/: lib.rs
old_server/: go.mod  go.sum
patches/: arrow-arith-fix.rs
plugins/: postgresql.wasm
scripts/: build_wasm_plugin.sh  validate_wasm_system.sh  wasm_test.sh
server/: Cargo.toml  c
server/internal/ai/llm/: config.go  model.go  model_test.go
server/internal/ai/memory/: manager.go  types.go
server/internal/api/rest/: server.go
server/internal/api/rest/handlers/: vector_handlers.go
server/internal/cache/: cache_test.go
server/internal/data/etl/: etl_test.go  manager.go  sources.go  transformers.go  types.go
server/internal/data/quality/: enhancer.go  manager.go  quality_test.go  types.go
server/internal/data/query/: performance.go  performance_test.go
server/internal/data/stream/: manager.go  processor_impl.go
server/internal/rest/: server.go
server/internal/system/: optimizer.go
server/src/: config.rs  lib.rs  main.rs
server/src/api/: health.rs  mod.rs
server/src/api/rest/: db.rs  mod.rs  server.rs
server/src/api/rest/handlers/: cache_handler.rs  db_handler.rs  health_handler.rs  mod.rs  vector_handlers.rs
server/src/cache/: lru_cache.rs  memory_cache.rs  mod.rs
server/src/config/: app_config.rs  main_config.rs  mod.rs
server/src/db/: cached_executor.rs  executor.rs  mod.rs  vector_executor.rs
server/src/middleware/: auth.rs  auth_new.rs  logger.rs  mod.rs
server/src/models/: db.rs  mod.rs  response.rs  vector.rs
server/src/utils/: error.rs  mod.rs  perf_monitor.rs
server/tests/: api_tests.rs  auth_test.rs  db_api_test.rs  db_operations_test.rs  health_test.rs  vector_api_test.rs  vector_operations_test.rs
src/: config.rs  lib.rs  main.rs  types.rs
vector-test/: Cargo.toml
wasm-test/: Cargo.toml
wasm-test/src/: main.rs
wit/: lumos-plugin.wit  plugin.wit
(+264 files in other folders)
