[package]
name = "lumos-db"
version = "0.1.0"
edition = "2021"
description = "Lightweight data platform for AI Agents combining OLTP and OLAP capabilities"
authors = ["Lumos Team"]
license = "MIT"

# Configure as a workspace to manage multiple packages
[workspace]
members = [
    "core",
    "server"
]
resolver = "2"

# Define the binary target for the main CLI
[[bin]]
name = "lumos-db"
path = "src/main.rs"

# Note: We avoid using Arrow dependencies directly to prevent compatibility issues
# Specifically, arrow-arith has method conflicts with chrono date functions

[dependencies]
# Internal dependencies
lumos-core = { path = "./core" }

# CLI and utilities
clap = { version = "4.4.13", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.79"

# Keep existing configuration below 

[build-dependencies]
walkdir = "2.4.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[patch.crates-io] 