[package]
name = "lumos-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for Lumos-DB, a data platform for AI Agents"
authors = ["Lumos Team"]
license = "MIT"

[dependencies]
# SQLite integration
rusqlite = { version = "0.29.0", features = ["bundled"] }

# DuckDB integration - use only bundled feature
duckdb = { version = "0.8.1", default-features = false, features = ["bundled"] }

# Utilities
thiserror = "1.0.47"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
# Use an older version of chrono to avoid date function conflicts with arrow-arith
chrono = { version = "=0.4.26", default-features = false, features = ["std", "clock"], package = "chrono" }
log = "0.4.19"
env_logger = "0.10.0"
tokio = { version = "1.29.1", features = ["full"] }
rand = "0.8.5"
bincode = "1.3.3"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.8.0"
criterion = "0.5.1"
tokio-test = "0.4.3"

[[bench]]
name = "query_benchmark"
harness = false

# Add patch to resolve arrow-arith and chrono method conflicts
[patch.crates-io]
arrow-arith = { git = "https://github.com/apache/arrow-rs", rev = "e00e61145c21e4da0c2c3f43ed365ef0e2041f3d" }
