[package]
name = "lumos-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for Lumos-DB, a data platform for AI Agents"
authors = ["Lumos Team"]
license = "MIT"

[workspace]

[dependencies]
# SQLite integration
rusqlite = { version = "0.29.0", features = ["bundled"] }

# DuckDB integration - use only bundled feature
duckdb = { version = "0.8.1", default-features = false, features = ["bundled"] }

# Utilities
thiserror = "1.0.47"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
# Use an older version of chrono to avoid date function conflicts with arrow-arith
chrono = { version = "=0.4.26", default-features = false, features = ["std", "clock", "serde"], package = "chrono" }
log = "0.4.19"
env_logger = "0.10.0"
tokio = { version = "1.29.1", features = ["full"] }
rand = "0.8.5"
bincode = "1.3.3"
hex = "0.4.3"

# Async traits support
async-trait = "0.1.74"

# HTTP client for LLM API calls
reqwest = { version = "0.11.22", features = ["json"], optional = true }

[features]
default = []
# Enable LLM API integration
llm = ["reqwest"]

[dev-dependencies]
tempfile = "3.8.0"
criterion = "0.5.1"
tokio-test = "0.4.3"

[[bench]]
name = "query_benchmark"
harness = false