[package]
name = "lumos-dataflow"
version = "0.1.0"
edition = "2021"
description = "数据流处理和ETL功能模块，支持YAML配置和DAG依赖管理"

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
async-trait = "0.1.68"
futures = "0.3.28"
log = "0.4.17"
thiserror = "1.0.40"
csv = "1.2.1"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "json", "chrono", "uuid"], optional = true }
regex = "1.8.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[features]
default = ["sql"]
sql = ["sqlx"]

[workspace] 