[package]
name = "lumos-dataflow"
version = "0.1.0"
edition = "2021"
description = "数据流处理和ETL功能模块，支持YAML配置和DAG依赖管理"

# 示例二进制文件
[[example]]
name = "run_etl_job"
path = "examples/run_etl_job.rs"

[[example]]
name = "run_memory_etl"
path = "examples/run_memory_etl.rs"

[[example]]
name = "plugin_manager"
path = "examples/plugin_manager.rs"

[[example]]
name = "test_plugins"
path = "examples/test_plugins.rs"

[[example]]
name = "plugin_test"
path = "examples/plugin_test.rs"

[[example]]
name = "simple_plugin_test"
path = "examples/simple_plugin_test.rs"

[[example]]
name = "simple_wasm_test"
path = "examples/simple_wasm_test.rs"
required-features = ["plugins"]

[[example]]
name = "standalone_wasm_test"
path = "examples/standalone_wasm_test.rs"

[[example]]
name = "minimal_wasm_test"
path = "examples/minimal_wasm_test.rs"

[[example]]
name = "vector_store_test"
path = "examples/vector_store_test.rs"
required-features = ["vector-store"]

[[bin]]
name = "simple_vector_test"
path = "bin/simple_vector_test.rs"
required-features = ["vector-store"]

[[bin]]
name = "simple_sqlite_test"
path = "bin/simple_sqlite_test.rs"

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
async-trait = "0.1.68"
futures = "0.3.28"
log = "0.4.17"
simple_logger = "4.0"
thiserror = "1.0.40"
csv = "1.2.1"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono", "uuid"], optional = true }
regex = "1.8.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
lazy_static = "1.4.0"
libloading = "0.7"
semver = "1.0"
clap = "3.2"
anyhow = "1.0.69"

# 数据库依赖
rusqlite = { version = "0.30.0", features = ["bundled-full", "functions", "serde_json"] }
duckdb = { version = "0.10.0", optional = true }

# WebAssembly依赖
wasmtime = "19.0.0"

# 其他
dirs = "4.0"
env_logger = "0.10"

# 矢量计算
ndarray = { version = "0.15.6", optional = true }

# 调整arrow相关包的版本，避免与chrono的冲突
# arrow = { version = "35.0.0", optional = true }
# arrow-array = { version = "35.0.0", optional = true }
# arrow-schema = { version = "35.0.0", optional = true }
# arrow-buffer = { version = "35.0.0", optional = true }
# 选择与arrow-35兼容的polars版本
# polars = { version = "0.28.0", optional = true, features = ["lazy", "temporal", "strings", "dtype-full"] }

[features]
default = ["sql", "plugins", "vector-store"]
sql = ["sqlx"]
plugins = []
vector-store = ["duckdb"]

[workspace]
members = [ "wasm-mongodb-test", "wasm-test", "wasm-postgresql-test"]

# 固定sqlite版本
[dependencies.libsqlite3-sys]
version = "0.27.0"
features = ["bundled"]
