[package]
name = "lumosdb_cli"
version = "0.1.0"
edition = "2021"
authors = ["Lumos DB Team"]
description = "Interactive command-line interface for Lumos-DB"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
rustyline = "12.0"
rustyline-derive = "0.9"
shellwords = "1.1"
colored = "2.0"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
notify = "6.1"
indicatif = "0.17"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.10"
tempfile = "3.8"
csv = "1.3"
# Lumos-DB client crate will be needed once available
# lumosdb = { path = "../clients/rust" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0" 