[package]
name = "lumos-dataflow-plugin-mongodb"
version = "0.1.0"
edition = "2021"
description = "MongoDB插件示例 - Lumos DataFlow框架"

[lib]
name = "lumos_dataflow_plugin_mongodb"
crate-type = ["cdylib"]

[dependencies]
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
mongodb = "2.4"
futures = "0.3"
chrono = "0.4"

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["full"] } 