[package]
name = "lumos-server"
version = "0.1.0"
edition = "2021"
description = "RESTful API server for Lumos-DB"
authors = ["Lumos-DB Team"]

[dependencies]
lumos-core = { path = "../core" }
rusqlite = { version = "0.29", features = ["bundled"] }

# Web服务框架
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
actix-rt = "2.9"

# 异步和并发
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"

# 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志和监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
prometheus = "0.13"
env_logger = "0.10"

# 配置和环境变量
config = "0.13"
dotenv = "0.15"

# 数据库连接池
r2d2 = "0.8"

# GraphQL支持
async-graphql = { version = "6.0", features = ["chrono", "uuid"] }
async-graphql-actix-web = "6.0"

# 认证和安全
jsonwebtoken = "9.1"
argon2 = "0.5"
rand = "0.8"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
num_cpus = "1.16"
log = "0.4"

[dev-dependencies]
actix-rt = "2.9"
reqwest = { version = "0.11", features = ["json"] }
fake = "2.9"
mockall = "0.11"
serde_json = "1.0"
