[package]
name = "lumos-server"
version = "0.1.0"
edition = "2021"
description = "Lumos-DB Server - Lightweight data platform for AI agents"
authors = ["Lumos-DB Team"]

[dependencies]
# 核心库
lumos-core = { path = "../core" }

# Web框架
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-rt = "2.8.0"
once_cell = "1.18.0"
# 异步支持
tokio = { version = "1.28.1", features = ["full"] }
futures = "0.3.28"
futures-util = "0.3.28"

# 序列化与反序列化
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# 日志与追踪
log = "0.4.17"
env_logger = "0.10.0"
tracing = "0.1.37"
tracing-actix-web = "0.7.4"

# 配置与环境变量
dotenv = "0.15.0"
config = "0.13.3"

# 错误处理
thiserror = "1.0.40"
anyhow = "1.0.71"

# 数据库
rusqlite = { workspace = true }

# 向量支持
ndarray = "0.15.6"

# 工具库
chrono = { workspace = true }
uuid = { version = "1.3.3", features = ["v4", "serde"] }

# 数据库连接池
r2d2 = "0.8"

# GraphQL支持
async-graphql = { version = "6.0", features = ["chrono", "uuid"] }
async-graphql-actix-web = "6.0"

# 认证和安全
jsonwebtoken = "9.1"
argon2 = "0.5"
rand = "0.8"

# 工具库
num_cpus = "1.16"
prometheus = "0.13"

[dev-dependencies]
actix-test = "0.1.1"
reqwest = { version = "0.11.18", features = ["json"] }
assert_matches = "1.5.0"
mockall = "0.11.4"

[[test]]
name = "db_operations_test"
path = "tests/db_operations_test.rs"

[[test]]
name = "vector_operations_test"
path = "tests/vector_operations_test.rs"

[features]
default = ["web"]
web = []
sqlite_only = []

# Tool库
