[package]
name = "lumos-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for Lumos-DB, a data platform for AI Agents"
authors = ["Lumos Team"]
license = "MIT"

[dependencies]
# Lumos-DB core library
lumos-core = { path = "../../core" }

# Error handling
thiserror = "1.0.47"

# Serialization
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"

# Async runtime
tokio = { version = "1.29.1", features = ["full"] }

# Logging
log = "0.4.19"

[dev-dependencies]
tokio-test = "0.4.3"
tempfile = "3.8.0" 