[package]
name = "lumos-db"
version = "0.1.0"
edition = "2021"
description = "LumosDB Rust SDK - Client library for LumosDB vector database"
authors = ["LumosDB Team"]
license = "MIT"
repository = "https://github.com/linchonglin/lumos-db"
readme = "README.md"
keywords = ["vector", "database", "embedding", "ai", "search"]
categories = ["database", "api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "0.31"
anyhow = "1.0" 