[package]
name = "lumosdb-client"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for LumosDB"
authors = ["LumosDB Team"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"

[dev-dependencies]
tokio-test = "0.4" 