[package]
name = "lumos-db-validation"
version = "0.1.0"
edition = "2021"
description = "Validation script for Rust LumosDB client"

[[bin]]
name = "lumos-db-validation"
path = "validate_rust.rs"

[dependencies]
lumosdb-client = { path = "../rust" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" 