[package]
name = "wasm-postgresql-test"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "10.0.1"
wasmtime-wasi = "10.0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
indicatif = "0.17.8"
csv = "1.2.1"
similar = "2.2.1"
prettytable-rs = "0.10.0" 