[package]
name = "wasm-postgresql-test"
version = "0.1.0"
edition = "2021"
authors = ["Lumos DB Team"]
description = "PostgreSQL WASM plugin test utility for benchmarking and functionality testing"

[dependencies]
anyhow = "1.0"
chrono = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
env_logger = "0.10"
log = "0.4"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
wasmtime = "10.0.0"
wasmtime-wasi = "10.0.0"
similar = "2.4"
handlebars = "4.5"
tempfile = "3.10"
open = "5.0"
config = "0.14"
toml = "0.8"
indicatif = "0.17"
thiserror = "1.0"
bincode = "1.3"
lazy_static = "1.4"
statistical = "1.0"
hdrhistogram = "7.5" 