[package]
name = "lumos-mongodb-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
wit-bindgen = "0.11.0"

# 可选的MongoDB依赖，实际实现会用到
# mongodb = { version = "2.5", optional = true }
# bson = { version = "2.6", optional = true }

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1

[features]
default = []
# mongodb-native = ["mongodb", "bson"] 