[package]
name = "mongodb"
version = "0.1.0"
edition = "2021"

# 空的工作区定义，使其成为独立包
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
# 移除mongodb和bson依赖，因为它们在WebAssembly中有兼容性问题
# 替代方案是在插件接口中使用通用的JSON格式数据交换
wit-bindgen = "0.11.0"

[profile.release]
lto = true
opt-level = 's'

[features]
default = []
# mongodb-native = ["mongodb", "bson"] 