[package]
name = "postgresql-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

# WebAssembly target-specific settings
[target.wasm32-unknown-unknown.dependencies]
# No host-specific dependencies for WebAssembly [workspace]
